Prepare for release 8.5.2
Prepare for release 8.5.2